--- a/Rapport/GET_Rapport_CandyFeine.tex
+++ b/Rapport/GET_Rapport_CandyFeine.tex
@@ -18,20 +18,72 @@
 \section{Business Modèle}
 
 \section{Structure juridique}
-Définir et justifier
+Nous choisissons de faire une Société à responsabilité limitée (Sarl)
+Cela car nous serions un petite entreprise et que le capital initial est raisonnable : 20 milles CHF.
 
 \section{Diagnostic stratégique de votre activité}
 
 \section{Publique Cible}
 
 \section{Le Produit}
+CandyFeine
 \subsection{Caractéristiques du produit}
+CandyFeine sont des bonbons pétillants gelifiés en forme de grains de café comprenant de la cafeine et à de différents gouts.
+Vendu sous forme de paquets de 10 ou 20 bonbons.
 \subsection{Assortiment, gamme}
+\textbf{Différents gout de bonbons :}
+
+\textit{* : signifie que c'est encore en prototype}
+\begin{itemize}
+ \item Pomme-citron avec sucre pétillant
+ \item Citron avec sucre pétillant
+ \item framboise avec sucre pétillant
+ \item café *
+\end{itemize}
+
+\textbf{Différents produits energisant :}
+\begin{itemize}
+ \item Caféine
+ \item Guarana *
+\end{itemize}
+
+\subsection{Ingrédients}
+\textbf{Correspond à la préparation de 180 grammes de bonbons pétillant pomme-citron}
+\textbf{ingérdients des bonbons}
+
+\textit{Certaines recettes peuvent contenir du colorant alimentaire naturels}
+\begin{itemize}
+ \item 100ml de jus de pomme
+ \item 100g de sirop de glucide
+ \item 8g d'amidion
+ \item 8g d'agar agar
+ \item 4g d'extrait de citron
+ \item 135mg de caféine pure
+\end{itemize}
+
+\textbf{ingrédients du sucre acidulé}
+\begin{itemize}
+ \item 6g d'acide citrique
+ \item 18g de sucre fin
+\end{itemize}
+
 \subsection{Qualité}
+Produit de manière artisanale dans le respect des fournisseurs et des consommateur.
+CandyFeine joue sur la transparence de ses produits et leur provenance.
+Nous assurons des produits de qualité, le plus local possible. Nos bonbons sont vegans.
 \subsection{Marque}
+Au sein de l'entreprise CandyFeine Sàrl notre marque CandyFeine décrit le produit en un mot, candy pour le bonbon et Feine en rapport à la cafeine contenue à l'intérieur.
+Le nom de la marque permet donc de rapidement assimiler le nom à un type de produit et l'anglisisme permet plus facielement l'exportation des bonbons.
+
 \subsection{Accessoires}
+Dans l'état actuelle des choses nous n'avons pas jugé utiles la création d'accessoires.
+
 \subsection{Packaging}
+Actuellement nous proposons nos bonbons par paquet de 10 ou 20, Ceci correspond à la dose d'une ou deux boisson energisantes connue du marché actuel.
+Le packaging est sous-forme de sachet avec un étiquette décrivant les ingrédients des bonbons.
+
 \subsection{Prestations annexes}
+A l'heure actuelle nous proposants uniquement le conseil client comme préstation annexe.
 
 \section{Modèle du Produit}
 
