--- a/Rapport/GET_Rapport_CandyFeine.tex
+++ b/Rapport/GET_Rapport_CandyFeine.tex
@@ -8,6 +8,8 @@
 \usepackage{natbib}
 \usepackage{graphicx}
 
+\usepackage[parfill]{parskip}
+
 \begin{document}
 
 \maketitle
@@ -94,26 +96,18 @@ A l'heure actuelle nous proposants uniquement le conseil client comme préstatio
 \includegraphics[scale=0.4]{../processus_de_commande.png} 
 
 \section{Prix}
+Le prix de la matière première pour une quantité de 1600 portions de bonbons nous revient à 560.- . Sur cette base on peut conclure que le prix de la matière première pour une portion revient à 0.35 CHF.\\
+A cela viennent s'ajouter le prix de l’emballage de 0.10 CHF.\\
+
+En ajoutant à cela les frais fixe pour la production ainsi que les salaires des employés et en faisant une corrélation des ces couts avec les capacité de production, on trouve que nous devons vendre notre produit à un prix raisonnable de 4.50 CHF.
+
 Ingrédients ( matière première ) : 0.35 CHF \\
+Embalage : 0.10 CHF \\
 Prix final du produit :  4.50 CHF\\
 
-Cette différence de prix nous permet de couvrir les frais de production, d'amortir l'investissement et de dégager un salaire correct pour les employés et le travail fourni.
+Cette différence de prix nous permet de couvrir les frais de production, d'amortir l'investissement et de dégager un salaire correct pour les employés.
 
 \section{Objectifs commerciaux}
-\subsection{Stratégie d'attirance des clients}
-Notre produits peut toucher un vaste pannel de personne nous pouvons tout de meme
-nous centrer sur le monde étudiants qui sont de grand consommateurs de caféine, ainsi que les conducteurs ou encore des sportifs.\\
-L'idée est donc de faire de commencer la publicité auprès des université et des stations services. Par la suite on peu immaginer aller à des
-foir ou passer sur de la publicité de plus grande échelle tel que radio, affiches publicitaires.
-\subsection{preuves de traction}
-Actuellement seul le monde estudiantin a été interpellé par rapport à notre produit. Ces derniers se trouvent etre intéressé par l'apport en caféine du produit.
-\subsection{cout d'qcquisition des clients}
-Dans le cas ou on commence la publicité par l'approche des étudiants et de stations services, il faut compter le cout en trajet, en affiche A4 publicitaire ainsi qu'en rabais sur les bonbons afin d'attirer les clients.
-
-\subsection{expension du nombre de clients}
-Par la suite, il faudrait réussir à faire notre place face aux produits energétiques existants. Pour cela le bouche à oreille et le buzz est notre plus grande chance.\\
-En cas de buzz, on peut donc imaginer une augmantation rapide et exponentielle du nombre d'acheteurs.\\
-Dans l'autre cas, il faudrait voir une augmantation plus stable et lent des consommateurs.
 
 \section{Publicité}
 
