--- a/Rapport/GET_Rapport_CandyFeine.tex
+++ b/Rapport/GET_Rapport_CandyFeine.tex
@@ -136,7 +136,7 @@ Dans l'autre cas, il faudrait voir une augmantation plus stable et lent des cons
 
 \section{Publicité}
 La publicité va principalement s'appuyer sur le bouche à oreilles via les foires et présentoires que nous allons installé pendant de cours périodes et puisque nous faisons aussi de la vente en ligne, l'utilisation de Google Ads peut nous permettre une augmentations de visibilité online. Pour notre budget de 200CHF par mois, les Google Ads nous offrent une visibilité entre 3 745 et 6 246 de vue par mois et un nombre de clic prévisionelle entre 737 à 1 229 clics par mois sur la Suisse. 
-\includegraphics[scale=0.4]{img/googleAdsPrevision.png} 
+\includegraphics[scale=0.4]{../img/googleAdsPrevision.jpg} 
 
 L'utilisation d'une page Facebook et d'un compte Twitter est une option gratuite qui permet d'aggrandir la visibilité et la présence du produits en ligne avec comme seul coût le temps qu'on lui accorde. 
 
