--- a/Rapport/GET_Rapport_CandyFeine.tex
+++ b/Rapport/GET_Rapport_CandyFeine.tex
@@ -129,12 +129,12 @@ Cette différence de prix nous permet de couvrir les frais de production, d'amor
 \section{Objectifs commerciaux}
 \subsection{Stratégie d'attirance des clients}
 Notre produits peut toucher un vaste pannel de personne nous pouvons tout de meme
-nous centrer sur le monde étudiants qui sont de grand consommateurs de caféine, ainsi que les conducteurs ou encore des sportifs.\\
-L'idée est donc de faire de commencer la publicité auprès des université et des stations services. Par la suite on peu immaginer aller à des
-foir ou passer sur de la publicité de plus grande échelle tel que radio, affiches publicitaires.
+nous centrer sur le monde étudiants qui sont de grand consommateurs de caféine, ainsi que les routiers ou encore les sportifs.\\
+L'idée est donc de commencer la publicité auprès des université et des stations services. Par la suite, on peut imaginer aller à des
+foire ou passer sur de la publicité de plus grande échelle tel que radio, affiches publicitaires. La  vente se déroulant aussi en ligne l'utilisation de GoogleAds est aussi intéressante à mettre en place.
 \subsection{preuves de traction}
-Actuellement seul le monde estudiantin a été interpellé par rapport à notre produit. Ces derniers se trouvent etre intéressé par son apport en caféine.
-\subsection{cout d'qcquisition des clients}
+Actuellement seul le monde estudiantin a été interpellé par rapport à notre produit. Ces derniers se trouvent etre intéressé par l'apport en caféine du produit.
+\subsection{cout d'acquisition des clients}
 Dans le cas ou on commence la publicité par l'approche des étudiants et de stations services, il faut compter le cout en trajet, en affiche A4 publicitaire ainsi qu'en rabais sur les bonbons afin d'attirer les clients.
 
 \subsection{expension du nombre de clients}
@@ -143,6 +143,10 @@ En cas de buzz, on peut donc imaginer une augmantation rapide et exponentielle d
 Dans l'autre cas, il faudrait voir une augmantation plus stable et lent des consommateurs.
 
 \section{Publicité}
+La publicité va principalement s'appuyer sur le bouche à oreilles via les foires et présentoires que nous allons installé pendant de cours périodes et puisque nous faisons aussi de la vente en ligne, l'utilisation de Google Ads peut nous permettre une augmentations de visibilité online. Pour notre budget de 200CHF par mois, les Google Ads nous offrent une visibilité entre 3 745 et 6 246 de vue par mois et un nombre de clic prévisionelle entre 737 à 1 229 clics par mois sur la Suisse. 
+\includegraphics[scale=0.4]{../img/googleAdsPrevision.jpg} 
+
+L'utilisation d'une page Facebook et d'un compte Twitter est une option gratuite qui permet d'aggrandir la visibilité et la présence du produits en ligne avec comme seul coût le temps qu'on lui accorde. 
 
 \section{Budget prévisionnel sur 3-5 ans}
 
