Modification de la pub et du budget

--- a/Rapport/GET_Rapport_CandyFeine.tex
+++ b/Rapport/GET_Rapport_CandyFeine.tex
@@ -135,10 +135,10 @@ En cas de buzz, on peut donc imaginer une augmantation rapide et exponentielle d
 Dans l'autre cas, il faudrait voir une augmantation plus stable et lent des consommateurs.
 
 \section{Publicité}
-La publicité va principalement s'appuyer sur le bouche à oreilles via les foires et présentoires que nous allons installé pendant de cours périodes et puisque nous faisons aussi de la vente en ligne, l'utilisation de Google Ads peut nous permettre une augmentations de visibilité online. Pour notre budget de 200CHF par mois, les Google Ads nous offrent une visibilité entre 3 745 et 6 246 de vue par mois et un nombre de clic prévisionelle entre 737 à 1 229 clics par mois sur la Suisse. 
+La publicité va principalement s'appuyer sur le bouche à oreilles via les foires et présentoires que nous allons installer pendant de courtes périodes dans certaines villes Suisses pour promouvoir le produit et puisque nous faisons aussi de la vente en ligne, l'utilisation de Google Ads peut nous permettre une augmentations de visibilité online. Pour notre budget de 200CHF par mois, les Google Ads nous offrent une visibilité entre 3 745 et 6 246 de vue par mois et un nombre de clic prévisionelle entre 737 à 1 229 clics par mois sur la Suisse. 
 \includegraphics[scale=0.4]{../img/googleAdsPrevision.jpg} 
-
-L'utilisation d'une page Facebook et d'un compte Twitter est une option gratuite qui permet d'aggrandir la visibilité et la présence du produits en ligne avec comme seul coût le temps qu'on lui accorde. 
+Cela peut, même si tous les utilisateurs n'achètent pas, augmenter la visibilité des prochaines foires et stands où l'on sera présent. Pour les gens sceptiques par rapport au produit et/ou qui n'aime pas acheter en ligne, cela leur permettra de pouvoir goûter le produit et de l'acheter en direct.
+L'utilisation d'une page Facebook et d'un compte Twitter est une option gratuite qui permet d'augmenter la visibilité et la présence du produits en ligne avec comme seul coût le temps qu'on lui accorde. 
 
 \section{Budget prévisionnel sur 3-5 ans}
 
