Ajout du budjet prévisionnel

--- a/Rapport/GET_Rapport_CandyFeine.tex
+++ b/Rapport/GET_Rapport_CandyFeine.tex
@@ -174,10 +174,20 @@ Dans l'autre cas, il faudrait voir une augmantation plus stable et lent des cons
 \section{Publicité}
 La publicité va principalement s'appuyer sur le bouche à oreilles via les foires et présentoires que nous allons installer pendant de courtes périodes dans certaines villes Suisses pour promouvoir le produit et puisque nous faisons aussi de la vente en ligne, l'utilisation de Google Ads peut nous permettre une augmentations de visibilité online. Pour notre budget de 200CHF par mois, les Google Ads nous offrent une visibilité entre 3 745 et 6 246 de vue par mois et un nombre de clic prévisionelle entre 737 à 1 229 clics par mois sur la Suisse. 
 \includegraphics[scale=0.4]{../img/googleAdsPrevision.jpg} 
-Cela peut, même si tous les utilisateurs n'achètent pas, augmenter la visibilité des prochaines foires et stands où l'on sera présent. Pour les gens sceptiques par rapport au produit et/ou qui n'aime pas acheter en ligne, cela leur permettra de pouvoir goûter le produit et de l'acheter en direct.
+Cela peut, même si tous les utilisateurs n'achètent pas, augmenter la visibilité des prochaines foires et stands où l'on sera présent. Pour les gens sceptiques par rapport au produit et/ou qui n'aime pas acheter en ligne, cela leur permettra de pouvoir goûter du produit via des sachet de 10g distribués et d'en acheter en direct.
 L'utilisation d'une page Facebook et d'un compte Twitter est une option gratuite qui permet d'augmenter la visibilité et la présence du produits en ligne avec comme seul coût le temps qu'on lui accorde. 
 
 \section{Budget prévisionnel sur 3-5 ans}
+Le budget prévisionnel est basé sur une approche plutôt optimiste.
+Et avec un apport initial de CHF 30 000.- répartis entre les quatres fondateurs. 
+
+Il faudrait pour être en balance parfaite vendre plus de 1600 paquets de bonbons au prix fixé de 3,50 par paquets. Ce chiffre étant relativement élevé, les calculs ont été effectués dans un premier temps pour tabler sur une production et une vente de 800 paquets le premier mois. En plus de cela, il faut compter la production d'une quantité de 2,4kg de bonbons afin d'avoir 240 paquets de 10g d'échantillons au vue d'une distribution gratuite de produit. Pour ensuite dans les mois suivants atteindre une production de 1600 sachets et chaque demi-année, cette production et cette vente doublerait de la moitié de cette valeur de 1600 paquets ce qui aurait pour impact un doublement de la production de bonbon chaque année. Pour la part des échantillons, une valeur arbitraire équivalent à un trente-deuxième de la production sera ensuite produite car avec la croissance de l'entreprise, il faudra voir à s'exporter sur les pays voisins pour vendre des produits. Les échantillons seront les ambassadeurs toujours via des stands et des foires d'où l'ajout de frais de voyages ainsi que l'augmentation des fonds pour les foires.
+
+Ensuite, il a été prévu qu'en cas de succès de l'entreprise, tous les employés augmentent leur temps de travail dans cette entreprise. Et que l'on engage même de nouveau employé. A partir d'un moment, nous avons jugés que la production serait tel que nous n'aurions plus d'autres choix que de louer un endroit pour pouvoir continuer la production donc mi-2021, il est prévu de cette acquisition. Cela a pour impact une augmentation dans les dépenses, d'abord le loyer, ensuite toutes les charges associés à ce nouvelle endroit et enfin le nouvelle investissement dans du matériel.
+
+Pour ce qui est des salaires, nous avons prévu un salaire de CHF 70 000.- qui serait fixe pendant les deux premières années mais avec un temps de travail qui augmente au fur des années. Les salaires subissent après deux ans une augmentations de 10 000 pour ensuite gagner une augmentation de 15 000 par années. La première augmentation est plus faible pour compenser l'acquisition d'un nouveau local ainsi que l'arrivée d'un nouvelle employé.
+
+L'augmentation général qui se produit se base sur le but de s'étendre avec des valeurs qui sembles cohérentes avec les possibilitées envisageables. Cependant, vu qu'aucune étude de marché n'a été réalisée certaines des valeurs sont purement arbitraires ainsi que les augmentations de prix liées à celle-ci.   
 
 \section{Conclusion}
 La mise sur le marché de notre produit nous semble prometteur. Nous avons des gens intéressés par le produit ce qui annonce des clients potentiels qui pourraient potentiellement acheter le produit voir devenir des clients régulier. Les bilans provisionnels que nous avons fait annoncent que nous devrions arriver à dégager un bénéfice suffisant dans les premiers mois pour faire démarrer l'entreprise et par la suite avoir des ressources suffisante pour réinvestir dans de nouvelle ressource de production. Il serait alors possible d'acheter des machines plus performantes et produire plus en moins de temps ou d'engager du personnels supplémentaire.
