Ajout des modification de Antoine

--- a/Rapport/GET_Rapport_CandyFeine.tex
+++ b/Rapport/GET_Rapport_CandyFeine.tex
@@ -28,15 +28,55 @@
 \maketitle
 
 \section{Introduction}
-> quel problématique notre produit va-t-il résoudre <
+Le mode de vie de notre société actuelle est devenu plus fatiguant, plus stressant, et plus contraignant. C'est la raison pour laquelle, de plus en plus de produits arrivent sur le marché afin d'aider les personnes à maintenir ce rythme de vie. La solution que nous offrons est bien différente de celles proposées. En effet, il existe bon nombre de boissons énergisante ou de barres énergiques pour offrir un boost au cours de la journée. Mais ce que nous proposons est à part. Avec les bonbons CandyFein, nous vous permettons de déguster de savoureux bonbons qui vous procurerons de l'énergie tout au long de la journée.
 
 \section{Business Modèle}
+\includegraphic{../img/BusinessModel.jpg}
 
 \section{Structure juridique}
 Nous choisissons de faire une Société à responsabilité limitée (Sarl)
 Cela car nous serions un petite entreprise et que le capital initial est raisonnable : 20 milles CHF.
 
 \section{Diagnostic stratégique de votre activité}
+\subsection(Analyse externe) 
+\textbf PESTEL
+
+
+\subsection Politique
+Activités de lobbying
+Délocalisation
+Politique Europeenne
+
+\subsection Economique
+Evolution du pouvoir d'achat
+Confiance des consommateurs
+Taux d'inflation
+
+\subsection Social
+Système de la santé
+Sécurité des personnes et des biens
+Conditions de vie
+Style de vie, mode et tendances
+Accès à l'information, internet et réseaux sociaux
+
+\subsection Technologique
+Recherche & développement
+Aides au financement de la recherche et de l’innovation
+Découvertes R&D
+Nouveaux brevets
+
+\subsection Ecologique
+Météo et climat
+Mobilité et transports
+
+\subsection Legal
+Réglementation des marchés
+Protection des consommateurs
+
+voir annexe
+
+
+\subsection Analyse interne
 
 \section{Publique Cible}
 Le bonbon "CandyFein" est un bonbon qui se veut énergisant. Il sera consommé au ressenti d'une baisse d'energie ou d'un besoin d'attention accrue. En début de jounrée, après un bon repas, en fin de journée ou début de soirée ce tout des petit moment ou un petit coup de fouet avant de repartir peut s'avérer nécessaire.\\
@@ -59,7 +99,7 @@ Vendu sous forme de paquets de 10 ou 20 bonbons.
  \item café *
 \end{itemize}
 
-\textbf{Différents produits energisant :}
+\textbf{Différents produits énergisant :}
 \begin{itemize}
  \item Caféine
  \item Guarana *
