--- a/Rapport/GET_Rapport_CandyFeine.tex
+++ b/Rapport/GET_Rapport_CandyFeine.tex
@@ -18,7 +18,7 @@
 
 
 \title{GET - Rapport- CandyFeine}
-\author{Joel Schar, Yann Lederrey, Steve Henriquet, Anthoine Zaf }
+\author{Joel Schar, Yann Lederrey, Steve Henriquet, Anthoine Nourazar }
 \date{December 2018}
 
 
